EnumerationList fix unaligned table display

--- a/src/components/EnumerationList/styles.module.css
+++ b/src/components/EnumerationList/styles.module.css
@@ -3,6 +3,7 @@
 
 :global(table.doxyEnumTable) {
   border: none;
+  display: table-row-group
 }
 
 :global(dt.doxyEnumTableTitle) {
